--- a/Czech/main/CloudBackup.apk/res/values-cs/strings.xml
+++ b/Czech/main/CloudBackup.apk/res/values-cs/strings.xml
@@ -239,4 +239,9 @@ Poznámka: Nastavení doinstalovaných aplikací nebude zálohováno na MiCloud.
   <string name="backup_failed_reason_network_error">Chyba sítě. Zkuste to znovu později.</string>
   <string name="restore_failed_reason_disk_space_not_enough">Není dostatek místa na úložišti.</string>
   <string name="restore_failed_reason_network_error">Chyba sítě. Zkuste to znovu později.</string>
+     <string name="other_device_main_space">První profil</string>
+     <string name="other_device_second_space">Druhý profil</string>
+     <string name="restoring_data">Obnovení dat...</string>
+     <string name="self_device_main_space">První profil tohoto zařízení</string>
+     <string name="self_device_second_space">Druhý profil tohoto zařízení</string>
 </resources>
