--- a/Czech/main/Notes.apk/res/values-cs/strings.xml
+++ b/Czech/main/Notes.apk/res/values-cs/strings.xml
@@ -290,4 +290,56 @@ Povolte aplikaci Poznámky přístup k úložišti."</string>
 Povolte aplikaci Poznámky přístup k seznamu volání."</string>
   <string name="toast_refuse_to_use_record_audio">"Povolení přístupu k mikrofonu je zakázáno.
 Povolte aplikaci Poznámky přístup k mikrofonu."</string>   
+     <string name="date_calculate_today">0 dní</string>
+     <string name="exceed_todo_text_limitation">Popis úlohy je príliš dlouhý.</string>
+     <string name="menu_todo_hide_finished_todo">Skrýt ukončené úlohy</string>
+     <string name="menu_todo_show_finished_todo">Zobrazit ukončené úlohy</string>
+     <string name="pref_desc_todo_float_mode">Potáhněte z okraje displeje pro zobrazení úloh</string>
+     <string name="pref_title_todo_float_mode">Použít Nástroje</string>
+     <string name="pref_title_todo_shorcut">Nástroje</string>
+     <string name="todo_alert_title_delete">Vymazat ukončené úlohy</string>
+     <string name="todo_custom_remind_tag_pattern_with_md">dd.MM HH:mm</string>
+     <string name="todo_custom_remind_tag_pattern_with_ymd">dd.MM.yyyy HH:mm</string>
+     <string name="todo_edit_audio_hint">Řekněte vaší úlohu</string>
+     <string name="todo_edit_btn_cancel_remind">Zrušit připomínku</string>
+     <string name="todo_edit_btn_custom">Nastavit připomínku</string>
+     <string name="todo_edit_btn_done">Hotovo</string>
+     <string name="todo_edit_btn_today">Dnes</string>
+     <string name="todo_edit_btn_tomorrow">Zítra</string>
+     <string name="todo_edit_text_hint">Zadajte popis úlohy</string>
+     <string name="todo_event_description_a_week_ago">Před týdnem</string>
+     <string name="todo_event_description_a_week_later">O týden</string>
+     <string name="todo_event_description_day_after_tomorrow">O 2 týdny</string>
+     <string name="todo_event_description_day_before_yesterday">Před 2 dny</string>
+     <string name="todo_event_description_today">Dnes</string>
+     <string name="todo_event_description_tomorrow">Zítra</string>
+     <string name="todo_event_description_yesterday">Včera</string>
+     <string name="todo_item_group_expired">Uplynulé</string>
+     <string name="todo_item_group_finished">Dokončené</string>
+     <string name="todo_item_group_further">Později</string>
+     <string name="todo_item_group_today">Dnes</string>
+     <string name="todo_item_group_tomorrow">Zítra</string>
+     <string name="todo_item_group_unschedule">Nenaplánované</string>
+     <string name="todo_item_status_delete">Vymazat</string>
+     <string name="todo_item_status_finished">Dokončené</string>
+     <string name="todo_item_status_unfinished">Nedokončené</string>
+     <string name="todo_menu_add_audio_description">Přidat hlasovou úlohu</string>
+     <string name="todo_menu_add_description">Přidat úlohu</string>
+     <string name="todo_menu_delete">Vymazat</string>
+     <string name="todo_module_name">Úlohy</string>
+     <string name="todo_notify_alarm_title">Upozornění na úlohu</string>
+     <string name="todo_schedule_time_expired">" (Uplynulá)"</string>
+     <string name="todo_schedule_time_md">dd.MM</string>
+     <string name="todo_schedule_time_mdhm">dd.MM HH:mm</string>
+     <string name="todo_schedule_time_today">Dnes</string>
+     <string name="todo_schedule_time_tomorrow">Zítra</string>
+     <string name="todo_schedule_time_yesterday">Včera</string>
+     <string name="todo_schedule_time_ymdhm">dd.MM.yyyy HH:mm</string>
+     <string name="todo_search_hint">Vyhledat úlohu</string>
+     <string name="todo_time_picker_title">Nastavit upozornění</string>
+     <string name="todo_user_guide_tip1">Vítejte v \"Úlohách\"!</string>
+     <string name="todo_user_guide_tip2">Toto je úloha. Můžete zaškrtnout políčko když ji dokončíte.</string>
+     <string name="todo_user_guide_tip3">Stlačte plus pro přidání úlohy.</string>
+     <string name="todo_user_guide_tip4">Nastavte si upozornění na vaše úlohy.</string>
+     <string name="todoalert_done">OK</string>
 </resources>
