--- a/Czech/main/SecurityCenter.apk/res/values-cs/strings.xml
+++ b/Czech/main/SecurityCenter.apk/res/values-cs/strings.xml
@@ -3224,4 +3224,68 @@ Remaining data includes data that has been rolled over from the previous month."
   <string name="gb_first_guide_title">Zvýšit rychlost a výkon na systémové úrovni</string>
   <string name="battery_desc_ambient_display">Energie spotřebovaná ambientním displejem</string>
   <string name="power_ambient_display">Ambientní displej</string>
+     <string name="alert_back_milink_hangup_tips_content">Vysílání nebude přerušené během ukončení hovoru.</string>
+     <string name="call_cloud_block">Cloud Intercept</string>
+     <string name="call_delete_all_hint">Vymazat všechny blokované hovory?</string>
+     <string name="gamebox_milink">Vysílat</string>
+     <string name="other_milink_connect">Není možné vysílat. Některá aplikace právě vysílá.</string>
+     <string name="pref_traffic_daily_package">Denní datový balíček</string>
+     <string name="pref_traffic_daily_package_brand">Poskytovatel</string>
+     <string name="pref_traffic_monthly_package">Měsíční datový balíček</string>
+     <string name="pref_traffic_package_type_summary">Měsíčně/Denně/Neomezeně</string>
+     <string name="pref_traffic_unlimited_package">Neomezený datový balíček</string>
+     <string name="privacy_apps_begin_use">Spustit</string>
+     <string name="privacy_apps_button_know">Rozumím</string>
+     <string name="privacy_apps_next_stup">Pokračovat</string>
+     <string name="privacy_apps_shield_message_summary">Nezobrazovat upozornění pro zabezpečené aplikace</string>
+     <string name="privacy_apps_shield_message_title">Nezobrazovat upozornění</string>
+     <string name="privacy_apps_tutorial_dlg_title">Jak najít skryté aplikace</string>
+     <string name="stop_milink_connect">Vysílání ukončeno</string>
+     <string name="superpower_dialog_button_disable_dialog">Více nezobrazovat</string>
+     <string name="superpower_dialog_button_ok">OK</string>
+     <string name="superpower_dialog_massage">Ultra šetřící režim omezí funkce které mají nejvyšší spotřebu baterie a sníží výkon zařízení na základní funkce (hovory, SMS, a připojení k síti). Povolit Ultra šetřící režim?</string>
+     <string name="superpower_dialog_title">Ultra šetřící režim</string>
+     <string name="superpower_notification_hint_enter">Povolit</string>
+     <string name="superpower_notification_summary">Povolit Ultra šetřící režim</string>
+     <string name="superpower_notification_time_12">dd. MMMM, EEEE</string>
+     <string name="superpower_notification_time_24">dd. MMMM, EEEE</string>
+     <string name="superpower_notification_title">Zůstává méně jak 10% baterie</string>
+     <string name="superpower_progress_content">Povolení Ultra šetřícího režimu...</string>
+     <string name="superpower_progress_left_time">%1$dh %2$dm</string>
+     <string name="superpower_progress_switch_home">Přepínání na Tmavé téma</string>
+     <string name="superpower_progress_title">Zbývající čas</string>
+     <string name="superpower_progress_turndown_brightness">Snížení jasu displeje</string>
+     <string name="superpower_progress_turnoff_items">Omezení náročných aktivit</string>
+     <string name="superpower_progress_turnoff_process">Omezit aktivity na pozadí</string>
+     <string name="superpower_savemode_limit1">tmavé téma</string>
+     <string name="superpower_savemode_limit2">Omezit aktivity na pozadí</string>
+     <string name="superpower_savemode_limit3">Omezení náročných aktivit (synchr., GPS, vibrace, Ambientní displej, atd.)</string>
+     <string name="superpower_savemode_limit4">Povolit vybrané aplikace aby fungovaly normálně</string>
+     <string name="superpower_settings">Ultra šetřící režim</string>
+     <string name="superpower_settins_autoenter_summary">Povolit Ultra šetřící režim automaticky když je baterie pod 10%</string>
+     <string name="superpower_settins_autoenter_title">Povolit automaticky</string>
+     <string name="superpower_settins_autoleave_summary">Povolit Ultra šetřící režim automaticky když je baterie pod 50%</string>
+     <string name="superpower_settins_autoleave_title">Povolit automaticky</string>
+     <string name="superpower_settins_other">Další nastavení</string>
+     <string name="superpower_settins_switch_summary">Omezit funkce které mají největší spotřebu baterie a snížit výkon zařízení na základní funkce (e.g. hovory, SMS, a vybrané aplikace)</string>
+     <string name="system_permission_declare_agree">Souhlasím</string>
+     <string name="system_permission_declare_disagree">Nesouhlasím</string>
+     <string name="system_permission_declare_double_link">Přečtěte si a odsouhlaste naše Podmínky používání a Ochranu soukromí pro používání této funkce.</string>
+     <string name="system_permission_declare_main_purpose" formatted="false">Vítejte v %1s! Tato aplikace vám umožní využívat tyto funkce: %2s.</string>
+     <string name="system_permission_declare_no_say_no">Bez potvrzení vašeho souhlasu tato aplikace nebude fungovat správně.</string>
+     <string name="system_permission_declare_privacy_declare">"Respektujeme a chráníme vaše soukromí.
+Vězte, že %1s vyžaduje následující povolení:"</string>
+     <string name="system_permission_declare_privacy_no_permission">"%1s potřebuje shromažďovat vaše data pro její správné fungování.
+Respektujeme a chráníme vaše soukromí."</string>
+     <string name="system_permission_declare_privacy_policy">Před používáním této funkce musíte souhlasit s naší Ochranou soukromí.</string>
+     <string name="system_permission_declare_revoke_path">Můžete odinstalovat tuto aplikaci, odhlásit se a spravovat povolení v Optimalizace - Spravovat aplikace - Povolení.</string>
+     <string name="system_permission_declare_revoke_system">Můžete ukončit tuto aplikaci.</string>
+     <string name="system_permission_declare_revoke_uninstallable">Můžete odinstalovat tuto aplikaci nebo spravovat oprávnění v Optimalizace &gt; Povolení &gt; Ostatní oprávnění.</string>
+     <string name="system_permission_declare_use_network">Připojení k síti</string>
+     <string name="system_permission_declare_use_network_no_permission">Připojit k síti</string>
+     <string name="system_permission_declare_user_agreement">Přečtěte si a odsouhlaste naše Podmínky používání.</string>
+     <string name="system_permission_perm_answer_call">Uskutečnit hovory</string>
+     <string name="system_permission_perm_read_mms">Číst MMS</string>
+     <string name="system_permission_perm_read_numbers">Číst telefonní čísla</string>
+     <string name="system_permission_perm_send_mms">Odeslat MMS</string>
 </resources>
