--- a/Czech/main/Settings.apk/res/values-cs/strings.xml
+++ b/Czech/main/Settings.apk/res/values-cs/strings.xml
@@ -5952,5 +5952,49 @@ Chcete-li použít tuto funkci, zapněte nabídku dostupnosti a klepněte na tla
   <string name="lock_screen_settings_title">Zámek obrazovky</string>
   <string name="xiaomi_cloud_service_description_contact">kontakty a</string>
   <string name="xiaomi_cloud_service_description_format">MiCloud synchronizuje vaše %s fotografie a zálohuje vaše aplikace a nastavení.</string>
-  
+     <string name="allow_oaid_used">Povolit používání ID zařízení</string>
+     <string name="aod_lock_screen_date">EEEE, MMMM d</string>
+     <string name="aod_lock_screen_date_12">EEEE, MMMM d</string>
+     <string name="aod_mode_bg">Pozadí</string>
+     <string name="aod_mode_clock">Hodiny</string>
+     <string name="aod_mode_style">Styl hodin a pozadí</string>
+     <string name="aod_sample_date">Květen 10 Úterý</string>
+     <string name="bluetooth_disable_mi_fast_connect">Deaktivovat Mi Fast Connect</string>
+     <string name="bluetooth_disable_mi_fast_connect_summary">Deaktivovat MiFast Connect funkci</string>
+     <string name="bluetooth_unlock_confirm_device_text_for_huami_band">Potvrďte na náramku.</string>
+     <string name="credentials_title_verification">Certifikace</string>
+     <string name="dark_color_mode">Tmavý režim</string>
+     <string name="dark_color_summary">Použít tmavou barvu pozadí v kompatibilních aplikacích</string>
+     <string name="default_launcher_title">Předvolený Launcher</string>
+     <string name="device_oaid">ID zařízení</string>
+     <string name="dump_log_summary">"This feature is designed for generating the 284 log in Alpha and Beta versions of MIUI. Use it with caution.
+You can view generated logs in File Manager."</string>
+     <string name="dump_log_title">About this feature</string>
+     <string name="gesture_c">Gesto C</string>
+     <string name="gxzw_add_fingerprint_area">Senzor otisků prstů</string>
+     <string name="gxzw_quick_open_enable_summary">Použít gesta pro otevření aplikací nebo zkratek</string>
+     <string name="gxzw_quick_open_enable_title">Zkratky otisku prstu</string>
+     <string name="gxzw_quick_open_fast_summary">Potáhněte pro použití zkratky po odemknutí.</string>
+     <string name="gxzw_quick_open_fast_title">Rychlé potáhnutí</string>
+     <string name="gxzw_quick_open_slow_summary">Stlačte a podržte ikonu otisku prstu pro otevření zkratek. Potáhněte pro použití zkratky.</string>
+     <string name="gxzw_quick_open_slow_title">Stlačit a podržet</string>
+     <string name="gxzw_quick_open_title">Zkratky</string>
+     <string name="kid_space_settings">Dětský profil</string>
+     <string name="miui_touch_filtered_touchassistant_warning">Dialog povolení je překrytý Dotykovým Asistentem. Přemístěte ikonu dotykového asistenta.</string>
+     <string name="notification_style_title">Způsob zobrazení</string>
+     <string name="open_dark_mode_dialog_summary">Vaše nastavení displeje není kompatibilní s Tmavým režimem. Nastavení budou obnovena po deaktivaci Tmavého režimu. Chcete ho deaktivovat nyní?</string>
+     <string name="open_dark_mode_dialog_title">Kompatibilita Tmavého režimu</string>
+     <string name="privacy_password_settings_summary">Heslo ochrany soukromí slouží na zabezpečení aplikací které obsahují citlivá data</string>
+     <string name="restore_oaid_content">Obnovení vašeho současného ID zařízení vytvoří nové. Obnovit nyní?</string>
+     <string name="restore_oaid_positive">Obnovit</string>
+     <string name="restore_oaid_title">Obnovení ID zařízení</string>
+     <string name="screen_cancel">Zrušit</string>
+     <string name="screen_confirm">Povolit</string>
+     <string name="screen_paper_mode_hdr_toast_new">Čtecí režim bude automaticky deaktivovaný během přehrávání HDR videa a během načítávání otisku prstu.</string>
+     <string name="status_bar_settings_function_description">O této funkci</string>
+     <string name="status_bar_settings_user_fold_description1">Složka upozornění filtruje méně důležité upozornění a shromažďuje je ve společné složce.</string>
+     <string name="status_bar_settings_user_fold_description2">MIUI si zapamatuje která upozornění otvíráte a podle toho rozpozná jejich prioritu.</string>
+     <string name="status_bar_settings_user_fold_description3" />
+     <string name="status_bar_settings_user_fold_disable">Vyp.</string>
+     <string name="status_bar_settings_user_fold_enable">Zap.</string>  
 </resources>
