--- a/Czech/main/ThemeManager.apk/res/values-cs/strings.xml
+++ b/Czech/main/ThemeManager.apk/res/values-cs/strings.xml
@@ -546,4 +546,42 @@ ale obsah, který hledáte, není dostupný ve Vaší zemi."</string>
      <string name="wallpaper_loop_title">Střídání tapet</string>
      <string name="wallpaper_loop_title_desk_wallpaper">Střídání tapet plochy</string>
      <string name="wallpaper_loop_title_lock_walpaper">Střídání tapet zámku</string>   
+     <string name="current_using_float_wallpaper_text">Průhledné</string>
+     <string name="enable_all_free_mode">Jen zdarma</string>
+     <string name="enabling_all_free_mode">Načítání...</string>
+     <string name="has_mamual_hide_font">Skryté</string>
+     <string name="has_mamual_hide_theme">Skryté</string>
+     <string name="has_mamual_hide_wallpaper">Skryté</string>
+     <string name="hide_free_font">Skrýt písma které jsou zdarma</string>
+     <string name="hide_free_theme">Skrýt témata která jsou zdarma</string>
+     <string name="hide_free_wallpaper">Skrýt tapety které jsou zdarma</string>
+     <string name="hide_mamual_hide_font">Nezobrazovat skryté písma</string>
+     <string name="hide_mamual_hide_theme">Nezobrazovat skrytá témata</string>
+     <string name="hide_mamual_hide_wallpaper">Nezobrazovat skryté tapety</string>
+     <string name="long_click_can_hide_resource">Stlačte a podržte pro ukrytí položek</string>
+     <string name="more_sub_comment">Zobrazit všechny odpovědi(%1$d)&gt;</string>
+     <string name="resource_hide">Skrýt</string>
+     <string name="resource_hide_fail">Nebylo možné skrýt</string>
+     <string name="resource_hide_succ">Ukryté</string>
+     <string name="resource_restore">Obnovit</string>
+     <string name="resource_restore_fail">Nebylo možné obnovit</string>
+     <string name="resource_restore_succ">Obnovené</string>
+     <string name="show_free_font">Zobrazit písma která jsou zdarma</string>
+     <string name="show_free_theme">Zobrazit témata která jsou zdarma</string>
+     <string name="show_free_wallpaper">Zobrazit tapety které jsou zdarma</string>
+     <string name="show_mamual_hide_font">Zobraziť ukryté písma</string>
+     <string name="show_mamual_hide_theme">Zobrazit ukrytá témata</string>
+     <string name="show_mamual_hide_wallpaper">Zobrazit ukryté tapety</string>
+     <string name="theme_comment_detail_no_more">To je všechno</string>
+     <string name="theme_comment_detail_sub_comment_title">Všechny odpovědi</string>
+     <string name="theme_comment_detail_title">Podrobnosti</string>
+     <string name="theme_comment_sub_comment_bar_hint">Sdílejte vaše nápady s komunitou</string>
+     <string name="transparent_wallpaper_is_running_in_background">Průhledná tapeta beží na pozadí</string>
+     <string name="unable_connect_network">Nebylo možné připojit se k síti</string>
+     <string name="wallpaper_delete_all">Vymazat vybrané položky?</string>
+     <string name="wallpaper_dynamic">Dynamické</string>
+     <string name="wallpaper_online">Online tapety</string>
+     <string name="wallpaper_online_no_more">To je všechno</string>
+     <string name="wallpaper_online_tip">Připojte se k síti pro načtení více položek</string>
+     <string name="wallpaper_static">Statické</string>
 </resources>
