--- a/Czech/main/XiaomiAccount.apk/res/values-cs/strings.xml
+++ b/Czech/main/XiaomiAccount.apk/res/values-cs/strings.xml
@@ -521,4 +521,64 @@ Zkontrolujte také složku SPAM."</string>
   <string name="sim_card">SIM karta</string>
   <string name="used_cloud_storage_info">Vnitřní úložiště %s</string>
   <string name="bind_google">Připojte svůj Google účet</string>
+     <string name="agreement_and_privacy">Podmínky používání a Ochrana soukromí</string>
+     <string name="com_facebook_device_auth_instructions">Navštivte facebook.com/device a zadejte kód zobrazený nahoře.</string>
+     <string name="com_facebook_image_download_unknown_error">Nastala neočakávaná chyba</string>
+     <string name="com_facebook_internet_permission_error_message">WebView přihlášení vyžaduje INTERNET povolení</string>
+     <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
+     <string name="com_facebook_like_button_liked">Líbí se mi</string>
+     <string name="com_facebook_like_button_not_liked">Líbí se mi</string>
+     <string name="com_facebook_loading">Načítání...</string>
+     <string name="com_facebook_loginview_cancel_action">Zrušit</string>
+     <string name="com_facebook_loginview_log_in_button">Přihlásit se</string>
+     <string name="com_facebook_loginview_log_in_button_continue">Pokračovat s Facebook</string>
+     <string name="com_facebook_loginview_log_in_button_long">Přihlásit se přes Facebook</string>
+     <string name="com_facebook_loginview_log_out_action">Odhlásit se</string>
+     <string name="com_facebook_loginview_log_out_button">Odhlásit se</string>
+     <string name="com_facebook_loginview_logged_in_as">Přihlášený jako: %1$s</string>
+     <string name="com_facebook_loginview_logged_in_using_facebook">Přihlášený přes Facebook</string>
+     <string name="com_facebook_send_button_text">Odeslat</string>
+     <string name="com_facebook_share_button_text">Sdílet</string>
+     <string name="com_facebook_smart_device_instructions">Pro připojení vašeho účtu, otevřete Facebook a zkontrolujte upozornění.</string>
+     <string name="com_facebook_smart_device_instructions_or">- NEBO -</string>
+     <string name="com_facebook_smart_login_confirmation_cancel">Nejste to vy?</string>
+     <string name="com_facebook_smart_login_confirmation_continue_as">Pokračovat jako %1$s</string>
+     <string name="com_facebook_smart_login_confirmation_title">Potvrdit přihlášení</string>
+     <string name="com_facebook_tooltip_default">Vyberte co chcete sdílet s aplikacemi.</string>
+     <string name="common_google_play_services_enable_button">Povolit</string>
+     <string name="common_google_play_services_enable_text">Aplikace %1$s bude fungovat až po povolení služeb Google Play.</string>
+     <string name="common_google_play_services_enable_title">Povolit služby Google Play</string>
+     <string name="common_google_play_services_install_button">Instalovat</string>
+     <string name="common_google_play_services_install_text">Na spuštění aplikace %1$s se vyžadují služby Google Play, které na zařízení nemáte.</string>
+     <string name="common_google_play_services_install_title">Instalovat služby Google Play</string>
+     <string name="common_google_play_services_notification_channel_name">Dostupnost služeb Google Play</string>
+     <string name="common_google_play_services_notification_ticker">Chyba služeb Google Play</string>
+     <string name="common_google_play_services_unknown_issue">Aplikace %1$s má problémy se službami Google Play. Zkuste to znova.</string>
+     <string name="common_google_play_services_unsupported_text">Aplikaci %1$s nebude možné spustit bez služeb Google Play, které vaše zařízení nepodporuje.</string>
+     <string name="common_google_play_services_update_button">Aktualizovat</string>
+     <string name="common_google_play_services_update_text">Aplikaci %1$s bude možné spustit až po aktualizaci služeb Google Play.</string>
+     <string name="common_google_play_services_update_title">Aktualizace služeb Google Play</string>
+     <string name="common_google_play_services_updating_text">Ke spuštění aplikace %1$s se vyžadují služby Google Play, které se momentálně aktualizují.</string>
+     <string name="common_google_play_services_wear_update_text">Vyžaduje se nová verze služeb Google Play. Aktualizují se automaticky v nejbližším čase.</string>
+     <string name="common_open_on_phone">Otevřít v telefonu</string>
+     <string name="common_signin_button_text">Přihlásit se</string>
+     <string name="common_signin_button_text_long">Přihlásit se s Google</string>
+     <string name="exit">Ukončit</string>
+     <string name="i_agree">OK</string>
+     <string name="i_agree_continue">Pokračovat</string>
+     <string name="optional_permissions">Volitelné povolení</string>
+     <string name="passport_first_login_prompt">Mi účet bude automaticky vytvořený po prvním přihlášení.</string>
+     <string name="passport_privacy_policy_required">Ochrana soukromí (povinné)</string>
+     <string name="passport_user_agreement_required">Podmínky používání (povinné)</string>
+     <string name="passport_user_reg_region">Krajina/Region</string>
+     <string name="passport_user_reg_region_warning">Po vytvorení účtu nebude možné změnit krajinu.</string>
+     <string name="passport_wx_bind_account_limit">Nebylo možné vytvořit účet. Zkuste se přihlásí jiným způsobem.</string>
+     <string name="permission_group_contacts">Kontakty</string>
+     <string name="permission_group_phone">Telefon</string>
+     <string name="permission_group_sms">SMS</string>
+     <string name="permission_group_storage">Úložiště</string>
+     <string name="scan_barcode">Načtěte QR kód</string>
+     <string name="search_menu_title">Vyhledat</string>
+     <string name="select_all">Všechno</string>
+     <string name="sim_changed_notification_msg">Aktualizujte vaše telefonní číslo pro obnovu Mi účtu.</string>
 </resources>
