--- a/Czech/main/Contacts.apk/res/values-cs/strings.xml
+++ b/Czech/main/Contacts.apk/res/values-cs/strings.xml
@@ -1325,4 +1325,11 @@ Vyberte si z následujících možností:</string>
   <string name="contacts_default_notification_channel">Upozornění</string>
   <string name="confirm_call_log_dial_summary">Zeptat se před vytáčením hovoru ze seznamu volání.</string>
   <string name="confirm_call_log_dial_title">Potvrdit vytáčení ze seznamu volání</string>  
+     <string name="menu_share_qrcode">QR kód</string>
+     <string name="menu_share_text">Text</string>
+     <string name="menu_share_vcard_file">Soubor</string>
+     <string name="share_contact_as">Sdílet kontakt jako</string>
+     <string name="share_qrcode">Sdílet QR kód</string>
+     <string name="shortcut_new_contact_label">Nový kontakt</string>
+     <string name="shortcut_scan_label">Načíst vizitku</string>
 </resources>
