--- a/Czech/main/MediaProvider.apk/res/values-cs/strings.xml
+++ b/Czech/main/MediaProvider.apk/res/values-cs/strings.xml
@@ -10,4 +10,18 @@
   <string name="root_videos">Videa</string>
   <string name="uid_label">Média</string>
   <string name="upgrade_msg">Aktualizování databáze médií.</string>
+     <string name="add_ringtone_text">Přidat tón zvonění</string>
+     <string name="delete_ringtone_text">Odstranit</string>
+     <string name="sound_name_awaken">Awaken</string>
+     <string name="sound_name_bounce">Bounce</string>
+     <string name="sound_name_drip">Drip</string>
+     <string name="sound_name_gallop">Gallop</string>
+     <string name="sound_name_nudge">Nudge</string>
+     <string name="sound_name_orbit">Orbit</string>
+     <string name="sound_name_rise">Rise</string>
+     <string name="sound_name_sway">Sway</string>
+     <string name="sound_name_wag">Wag</string>
+     <string name="storage_description">Místní úložiště</string>
+     <string name="unable_to_add_ringtone">Nepodařilo se přidat vlastní tón zvonění</string>
+     <string name="unable_to_delete_ringtone">Nepodařilo se odstranit vlastní tón zvonění</string>
 </resources>
