--- a/Czech/main/MiuiCamera.apk/res/values-cs/strings.xml
+++ b/Czech/main/MiuiCamera.apk/res/values-cs/strings.xml
@@ -767,4 +767,27 @@ Objekt bude ostrý na rozmazaném pozadí."</string>
   <string name="pref_camera_lying_title">Upozornit na orientaci</string>
   <string name="user_define_watermark_cancel">Zrušit</string>
   <string name="user_define_watermark_save">Uložit</string>
+     <string name="autozoom_landscape_hint">Pro nejlepší efekt foťte v režimu na šírku</string>
+     <string name="dialog_google_lens_option_0">Google Lens</string>
+     <string name="hint_ae_af_lock_extra">Zaostření a expozice byly uzamknuty. Přepněte na Google Lens v nastavení</string>
+     <string name="lighting_pattern_null">Žádný</string>
+     <string name="live_speed_extreme_fast">Nejrýchlejší</string>
+     <string name="live_speed_extreme_slow">Nejpomalejší</string>
+     <string name="live_speed_fast">Rychle</string>
+     <string name="live_speed_fragment_tab_name">Rychlost</string>
+     <string name="live_speed_normal">Normálně</string>
+     <string name="live_speed_slow">Pomalu</string>
+     <string name="pref_camera_front_bokeh_entry_off">Vyp</string>
+     <string name="pref_camera_front_bokeh_entry_on">Zap</string>
+     <string name="pref_camera_long_press_viewfinder_title">Viewfinder</string>
+     <string name="pref_camera_stereo_mode_title">Upravení zaostření</string>
+     <string name="ultra_wide_open_tip_sat">Ultra široký režim</string>
+     <string name="video_beauty_tip">Zkrášlení pro videa</string>
+     <string name="wideselfie_press_shoot_key_to_start">Dotkněte se spoušte</string>
+     <string name="wideselfie_result_image_lossless">Nebylo možné vytvořit panorama</string>
+     <string name="wideselfie_rotate_slowly">Otočte telefon na bok</string>
+     <string name="wideselfie_rotate_to_back">Nakloňte telefon dozadu</string>
+     <string name="wideselfie_rotate_to_front">Nakloňte telefon dopředu</string>
+     <string name="wideselfie_rotate_to_left_slowly">Natočte telefon doleva</string>
+     <string name="wideselfie_rotate_to_right_slowly">Natočte telefon doprava</string>
 </resources>
