--- a/Czech/main/NotificationCenter.apk/res/values-cs/strings.xml
+++ b/Czech/main/NotificationCenter.apk/res/values-cs/strings.xml
@@ -41,4 +41,5 @@
     <string name="summary_lock_screen_enable_notification_first">Pro oznámení na Zamykací obrazovce nejprve povolte zobrazování oznámení</string>
     <string name="summary_show_badge_enable_notification_first">Pro Bubliny oznámení nejprve povolte zobrazování oznámení</string>
     <string name="expand_top_notification">Rozbalit první upozornění</string>
+     <string name="notch_and_status_bar_setting">Výřez a lišta upozornení</string>
 </resources>
