--- a/Czech/device/achilles/Settings.apk/res/values-cs-rCZ/strings.xml
+++ b/Czech/device/achilles/Settings.apk/res/values-cs-rCZ/strings.xml
@@ -518,7 +518,7 @@ Zapojte do původního telefonu jeho kabel. Pomocí adaptéru v balení kabel p
   <string name="locale_remove_menu">Odstranit</string>
   <string name="location_app_level_permissions">Oprávnění na úrovni aplikace</string>
   <string name="location_off_summary">VYPNUTO</string>
-  <string name="location_on_summary">ZAPNUTO / %1$s</string>
+  <string name="location_on_summary">ZAPNUTO</string>
   <string name="lock_profile_wipe_attempts">Zkuste to znovu. Pokus %1$d z %2$d.</string>
   <string name="lock_profile_wipe_content">Příliš mnoho neplatných pokusů. Váš pracovní profil a přidružená data z tohoto zařízení budou odstraněna.</string>
   <string name="lock_profile_wipe_dismiss">Zavřít</string>
