--- a/Czech/main/MiuiCamera.apk/res/values-cs/strings.xml
+++ b/Czech/main/MiuiCamera.apk/res/values-cs/strings.xml
@@ -790,4 +790,5 @@ Objekt bude ostrý na rozmazaném pozadí."</string>
      <string name="wideselfie_rotate_to_front">Nakloňte telefon dopředu</string>
      <string name="wideselfie_rotate_to_left_slowly">Natočte telefon doleva</string>
      <string name="wideselfie_rotate_to_right_slowly">Natočte telefon doprava</string>
+  <string name="lying_direct_hint">Aktuální orientace</string>
 </resources>
